--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,8 +3,11 @@ FROM node:16-alpine
 WORKDIR '/app'
 
 COPY package.json .
-RUN npm install
+RUN npm config set unsafe-perm true
+RUN npm install --force
 
 COPY . .
 
-CMD ["npm", "start"]
+RUN chown -R node /app/node_modules
+USER node
+CMD ["npm", "run", "start"]
